# develop_on_linux

./: Untitled-1.py  arkzip_2.4.4_amd64.deb  get_oauth2_token.py  newtonraphson.ipynb  readme.txt
--upgrade/google_api_python_client-2.49.0.dist-info/: RECORD
--upgrade/lib-4.0.0.dist-info/: RECORD
--upgrade/protobuf-4.21.0.dist-info/: RECORD
--upgrade/rsa-4.8.dist-info/: RECORD
develop/: example  example.c
develop/R/LinearAlgebra/: 1_SolLU.r
develop/WEB/crawling/: toSehyon.html
develop/c++/LinuxTerminalGame/: g01  g01.cpp  g02
develop/c++/LinuxTerminalGame/Applications/RhythmGame/: CMakeLists.txt  RhythmTa.cpp
develop/c++/LinuxTerminalGame/Applications/RhythmGame/Sources/Utils/: input.cpp  timer.cpp
develop/c++/LinuxTerminalGame/SnakeGame/: CMakeLists.txt
develop/c++/LinuxTerminalGame/SnakeGame/Includes/: Map.hpp  Snake.hpp
develop/c++/LinuxTerminalGame/SnakeGame/Includes/Utils/: Input.hpp
develop/c++/LinuxTerminalGame/SnakeGame/Sources/: Map.cpp  Snake.cpp
develop/c++/LinuxTerminalGame/SnakeGame/Sources/Utils/: Input.cpp
develop/c++/LinuxTerminalGame/SnakeGame/src/: Main.cpp
develop/c++/frame buffer/: a.out  example1.c
develop/c++/game/: g02.cpp  randomBuf  randomBuf.cpp
develop/python/cafe/: cafe.ipynb  ediya.csv  people.csv  starbucks.csv  starbucks.xlsx
develop/python/crawling/: ediya.csv  ediyalocation.csv  kakaomap.ipynb  starbucks.csv  (+4 more)
hanium/: client_secret.json  py-oauth2-access-token.ipynb  server.ipynb  todo.txt
hanium/templates/: chatbase.html  main.html
study/machine_learning/: ai_studynote.ipynb  optimization.ipynb
(+251 files in other folders)
